--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "@vue/compiler-sfc": "^3.5.13",
     "vue-cli-plugin-single-spa": "~4.0.0",
     "eslint-plugin-vue": "^9.32.0",
     "vue-eslint-parser": "^9.4.3",
-    "vue-template-compiler": "^2.7.16",
     "typescript": "^5.9.3"
   }
 }
