--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "@org/playground-vue",
   "version": "0.1.0",
   "private": true,
-  "packageManager": "npm@10.9.0",
+  "packageManager": "pnpm@9.15.4",
   "engines": {
     "node": "20.x"
   },
   "scripts": {
-    "start": "npm run serve",
-    "start:standalone": "npm run serve",
+    "start": "pnpm run serve",
+    "start:standalone": "pnpm run serve",
     "serve": "STANDALONE_SINGLE_SPA=true vue-cli-service serve --port 9006",
     "build": "vue-cli-service build"
   },
